fix bug #61359: json_encode() calls too many reallocs